--- a/views/center/topSheet/pdf.ejs
+++ b/views/center/topSheet/pdf.ejs
@@ -1,181 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>News PDF</title>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>News PDF</title>
+    <style>
+      .flex-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
 
-  <style>
-    .flex-container {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
+      .flex-container h5 {
+        padding: 0;
+        margin: 0;
+      }
 
-    .flex-container h5 {
-      padding: 0;
-      margin: 0;
-    }
+      .table,
+      td,
+      th {
+        border: 1px solid black;
+      }
 
-    .table,
-    td,
-    th {
-      border: 1px solid black;
-    }
+      .table {
+        width: 100%;
+        border-collapse: collapse;
+      }
 
-    .table {
-      width: 100%;
-      border-collapse: collapse;
-    }
+      .center {
+        text-align: center;
+      }
 
-    .center {
-      text-align: center;
-    }
+      .inline-block-child {
+        display: inline-block;
+      }
 
-    .inline-block-child {
-      display: inline-block;
-    }
+      .header {
+        display: flex;
+        width: 100%;
+      }
 
-    .header {
-      display: flex;
-      width: 100%;
-    }
+      .header > * {
+        width: 33%;
+      }
 
-    .header>* {
-      width: 33%;
-    }
+      .row {
+        display: flex;
+        width: 100%;
+      }
 
-    .row {
-      display: flex;
-      width: 100%;
-    }
+      .row > * {
+        width: 50%;
+      }
+    </style>
+  </head>
 
-    .row>* {
-      width: 50%;
-    }
-  </style>
-</head>
-
-<body>
-  <div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
-    <div>
-      <div class="header">
-        <div>
-          <img src="/images/dae.jpg" width="100" alt="dae">
+  <body>
+    <div
+      style="
+        margin-top: 5px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        background-color: #ffffffa6;
+      "
+      class="center"
+    >
+      <div>
+        <div class="header">
+          <div>
+            <img src="/images/bd.png" width="100" alt="bd" />
+          </div>
+          <div class="flex-container">
+            <h5>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</h5>
+            <h5>কৃষি সম্প্রসারণ অধিদপ্তর</h5>
+            <h5>হর্টিকালচার উইং</h5>
+          </div>
+          <div>
+            <img src="/images/dae.jpg" width="100" alt="dae" />
+          </div>
         </div>
-        <div class="flex-container">
-          <h5>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</h5>
-          <h5>কৃষি সম্প্রসারণ অধিদপ্তর</h5>
-          <h5>হর্টিকালচার উইং</h5>
+        <h1>মাসিক টপশীট (উৎপাদন)</h1>
+        <div class="row">
+          <div>
+            <p><b>সেন্টারের নাম :</b><%= centerName %></p>
+          </div>
+          <div>
+            <p>
+              <b>প্রতিবেদনের তারিখ : </b><%=
+              moment(selectedDate).locale("bn").format("MM/YYYY") %>
+            </p>
+          </div>
         </div>
-        <div>
-          <img src="/images/bd.png" width="100" alt="bd">
-        </div>
+        <%if (records.length >0){ %>
+        <table
+          class="table table-bordered table-striped"
+          id="tblCustomers"
+          cellspacing="0"
+          cellpadding="0"
+        >
+          <thead>
+            <tr>
+              <th>আইটেমের নাম</th>
+              <th>লক্ষ্যমাত্রা (সংখ্যা/প্যাকেট)</th>
+              <th>গত মাস পর্যন্ত উৎপাদন (সংখ্যা/প্যাকেট)</th>
+              <th>চলতি মাসে উৎপাদন(সংখ্যা/প্যাকেট)</th>
+              <th>আলোচ্য মাস পর্যন্ত মোট উৎপাদন (সংখ্যা/প্যাকেট)</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% cropCatg.forEach(function(row,index){ %> <% const currentMonth =
+            moment().format("MMM-YYYY").toLowerCase(); var totalProductionTarget
+            = 0; var currentProductionSum = 0; var previousMonthProduction = 0;
+            var totalProduction = 0; var productionTargetSum = 0; var startRange
+            = ""; var endRange = ""; if (moment().format("M") < 7){ startRange =
+            "jul"+"-"+moment().subtract(1, "year").format('yyyy') endRange =
+            "jul"+"-"+moment().format('yyyy') }else{ startRange =
+            "jul"+"-"+moment().format('yyyy') endRange =
+            "jul"+"-"+moment().add(1, "year").format('yyyy') }
+            records.forEach((monthProg) => { if (monthProg.subCategory ===
+            row.name){ // উৎপাদন (লক্ষ্যমাত্রা) ********* const TargetProduction
+            = JSON.parse(monthProg.productionTarget)
+            TargetProduction.forEach(function(prodTarget){ if (
+            moment(currentMonth).isAfter(prodTarget.startTime) &&
+            moment(currentMonth).isBefore(prodTarget.endTime) ){
+            productionTargetSum += parseInt(prodTarget.amount) } }) // total
+            lokkhomatra in this economic year totalProductionTarget +=
+            parseInt(monthProg.productionTarget) //total purbo month porjonto
+            production const currentProd =
+            JSON.parse(monthProg.productionCurrent)
+            currentProd.forEach(function(prodCurrent){ if ( prodCurrent.time ===
+            moment().format("MMM-YYYY").toLowerCase() ) { currentProductionSum
+            += parseInt(prodCurrent.amount) } else if ( moment( prodCurrent.time
+            ).isAfter(startRange) && moment( prodCurrent.time
+            ).isBefore(endRange) ){ previousMonthProduction +=
+            parseInt(prodCurrent.amount) } }) } }) %>
+            <tr>
+              <td><%= row.name %></td>
+              <td>
+                <%= new Number(productionTargetSum).toLocaleString("bn-BD") %>
+              </td>
+              <td>
+                <%= new Number(previousMonthProduction).toLocaleString("bn-BD")
+                %>
+              </td>
+              <td>
+                <%= new Number(currentProductionSum).toLocaleString("bn-BD") %>
+              </td>
+              <td>
+                <%= new Number(currentProductionSum +
+                previousMonthProduction).toLocaleString("bn-BD") %>
+              </td>
+            </tr>
+            <% }) %>
+          </tbody>
+        </table>
+        <% }else{ %>
+        <table
+          class="table table-bordered table-striped"
+          id="tblCustomers"
+          cellspacing="0"
+          cellpadding="0"
+        >
+          <thead>
+            <tr>
+              <th>আইটেমের নাম</th>
+              <th>লক্ষ্যমাত্রা (সংখ্যা/প্যাকেট)</th>
+              <th>গত মাস পর্যন্ত উৎপাদন (সংখ্যা/প্যাকেট)</th>
+              <th>চলতি মাসে উৎপাদন(সংখ্যা/প্যাকেট)</th>
+              <th>আলোচ্য মাস পর্যন্ত মোট উৎপাদন (সংখ্যা/প্যাকেট)</th>
+              <th>পরিবর্তন/মুছুন</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% records.forEach(function(row){ %>
+            <tr>
+              <td colspan="10">No data Found</td>
+            </tr>
+            <% }) %>
+          </tbody>
+        </table>
+        <% } %>
       </div>
-      <h1>মাসিক টপশীট (উৎপাদন)</h1>
-      <div class="row">
-        <div>
-          <p><b>সেন্টারের নাম :</b><%= centerName %></p>
-        </div>
-        <div>
-          <p><b>প্রতিবেদনের তারিখ : </b><%= moment(selectedDate).locale("bn").format("MM/YYYY") %></p>
-        </div>
-      </div>
-      <%if (records.length >0){ %>
-      <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
-        <thead>
-          <tr>
-            <th>আইটেমের নাম</th>
-            <th>লক্ষ্যমাত্রা (সংখ্যা/প্যাকেট)</th>
-            <th>গত মাস পর্যন্ত উৎপাদন (সংখ্যা/প্যাকেট)</th>
-            <th>চলতি মাসে উৎপাদন(সংখ্যা/প্যাকেট)</th>
-            <th>আলোচ্য মাস পর্যন্ত মোট উৎপাদন (সংখ্যা/প্যাকেট)</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% cropCatg.forEach(function(row,index){ %>
-          <%
-                        const currentMonth = moment().format("MMM-YYYY").toLowerCase();
-                        var totalProductionTarget = 0;
-                        var currentProductionSum = 0;
-                        var previousMonthProduction = 0;
-                        var totalProduction = 0;
-                        var productionTargetSum = 0;
-
-                        var startRange = "";
-                        var endRange = "";
-
-                        if (moment().format("M") < 7){
-                            startRange = "jul"+"-"+moment().subtract(1, "year").format('yyyy')
-                            endRange = "jul"+"-"+moment().format('yyyy')
-                        }else{
-                            startRange = "jul"+"-"+moment().format('yyyy')
-                            endRange = "jul"+"-"+moment().add(1, "year").format('yyyy')
-                        }
-
-                        records.forEach((monthProg) => {
-                            if (monthProg.subCategory === row.name){
-
-                                // উৎপাদন (লক্ষ্যমাত্রা) *********
-
-                                const TargetProduction = JSON.parse(monthProg.productionTarget)
-                                TargetProduction.forEach(function(prodTarget){
-                                    if ( moment(currentMonth).isAfter(prodTarget.startTime) &&  moment(currentMonth).isBefore(prodTarget.endTime) ){
-                                        productionTargetSum += parseInt(prodTarget.amount)
-                                    }
-                                })
-
-                                // total lokkhomatra in this economic year
-                                totalProductionTarget += parseInt(monthProg.productionTarget)
-
-                                //total purbo month porjonto production
-                                const currentProd = JSON.parse(monthProg.productionCurrent)
-                                currentProd.forEach(function(prodCurrent){
-                                    if ( prodCurrent.time === moment().format("MMM-YYYY").toLowerCase() ) {
-                                        currentProductionSum += parseInt(prodCurrent.amount)
-                                    }
-                                    else if ( moment( prodCurrent.time ).isAfter(startRange) &&  moment( prodCurrent.time ).isBefore(endRange) ){
-                                        previousMonthProduction += parseInt(prodCurrent.amount)
-                                    }
-                                })
-                            }
-                        })
-                    %>
-          <tr>
-            <td><%= row.name %></td>
-            <td><%= new Number(productionTargetSum).toLocaleString("bn-BD") %></td>
-            <td><%= new Number(previousMonthProduction).toLocaleString("bn-BD") %></td>
-            <td><%= new Number(currentProductionSum).toLocaleString("bn-BD") %></td>
-            <td><%= new Number(currentProductionSum + previousMonthProduction).toLocaleString("bn-BD") %></td>
-          </tr>
-          <% }) %>
-        </tbody>
-      </table>
-      <% }else{ %>
-      <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
-        <thead>
-          <tr>
-            <th>আইটেমের নাম</th>
-            <th>লক্ষ্যমাত্রা (সংখ্যা/প্যাকেট)</th>
-            <th>গত মাস পর্যন্ত উৎপাদন (সংখ্যা/প্যাকেট)</th>
-            <th>চলতি মাসে উৎপাদন(সংখ্যা/প্যাকেট)</th>
-            <th>আলোচ্য মাস পর্যন্ত মোট উৎপাদন (সংখ্যা/প্যাকেট)</th>
-            <th>পরিবর্তন/মুছুন</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% records.forEach(function(row){ %>
-          <tr>
-            <td colspan="10">No data Found</td>
-          </tr>
-          <% }) %>
-        </tbody>
-      </table>
-      <% } %>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
