--- a/views/allCenterInfo.ejs
+++ b/views/allCenterInfo.ejs
@@ -66,8 +66,8 @@
                     <li><a class=""  href="/center/charaKolomFixed" title="contact">চারা কলমের মূল্য তালিকা</a></li>
                     <li><a class=""  href="/#about" title="about">চারা কলমের মজুদ</a></li>
                     
-                    <li><a class=""  href="/center/allCenterInfo" title="contact">সেন্টারের যোগাযোগ তথ্য</a></li>
-                    <li><a class=""  href="/#contact" title="contact">প্রধান কার্যালয়ের যোগাযোগ তথ্য</a></li>
+                    <li><a class=""  href="/center/allCenterInfo" title="contact">সেন্টারে যোগাযোগের তথ্য</a></li>
+                    <li><a class=""  href="/#contact" title="contact">প্রধান কার্যালয়ে যোগাযোগের তথ্য</a></li>
                     
                 </ul>
 
@@ -95,7 +95,7 @@
           
             <div class="row home-content__main">
 
-                <h1 style="color: #070707; text-decoration: underline; font-weight: bold; " class="text-center">সেন্টারের যোগাযোগ তথ্য</h1>
+                <h1 style="color: #070707; text-decoration: underline; font-weight: bold; " class="text-center">সেন্টারে যোগাযোগের তথ্য</h1>
             
             <div  class="table-responsive" id="output">
                 <%if (records.length >0){ %>
