fixed apa form and rajoshho excel

--- a/views/center/apa/apaForm.ejs
+++ b/views/center/apa/apaForm.ejs
@@ -62,7 +62,7 @@
                         <option value="">কৌশলগত উদ্দেশ্য বাছুনঃ</option>
                         <% apaCodes.forEach(function(row){ %> <% if
                         (row.parent_id === null) {%>
-                        <option value="<%" ="row.id" %>><%= row.name %></option>
+                        <option value="<%= row.id %>"><%= row.name %></option>
                         <% } %> <% }) %>
                       </select>
                       <!--                                            <input type="text" class="form-control" name="uddessho" placeholder="কৌশলগত উদ্দেশ্য">-->
