--- a/views/pd/rajossho/rajossho.ejs
+++ b/views/pd/rajossho/rajossho.ejs
@@ -67,7 +67,7 @@
           Download PDF
         </button>
         <button
-          onclick="exportToExcel('tblexportData', 'রাজস্ব')"
+          onclick="exportToExcel('tblexportData', 'rajoshho')"
           class="btn btn-success"
         >
           Export Table Data To Excel File
