fixed monthly progress form update bug

--- a/views/center/monthlyProgress/monthlyProgressFormEdit.ejs
+++ b/views/center/monthlyProgress/monthlyProgressFormEdit.ejs
@@ -27,6 +27,7 @@
                     currentProductionSum += parseInt(prodCurrent.amount)
                 }
             })
+            console.log("currentProductionSum",currentProductionSum)
 
             //ডিএই চালানে প্রাপ্তি (চলতি মাস)
             var daePraptiSum = 0;
